corrected footer position
the footer should stick to the bottom of the page, not the window

--- a/examConfirmation.html
+++ b/examConfirmation.html
@@ -44,10 +44,12 @@
             role="button"><span id="confirmText">Confirm</span></a>
         </div>
         <hr class="line" id="bottomLine">
+        <div class="goToTheBottom">
         <div class="footer">
             <p>
                 <a class="noLine" href="credits.html">Credits</a>
             </p>
+        </div>
         </div>
     </body>
 </html>
