--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@
             </p>
         </div>
         <hr />
-        <footer id="footer">
+        <div id="footer">
             <p>
                 <a class="noLine" href="credits.html">Credits</a>
                 <a class="noLine" href="instructorProfile.html">Instructor Login</a>
             </p>
-        </footer>
-
+        </div>
     </body>
 </html>
