--- a/instructorProfile.html
+++ b/instructorProfile.html
@@ -50,10 +50,12 @@
         <!--target="_blank" rel="noopener noreferrer"-->
     </div>
         <hr id="bottomLine">
-        <div id="footerINT">
-            <p>
-                <a class="noLine" href="credits.html">Credits</a>
-            </p>
+        <div class="goToTheBottom">
+            <div id="footerINT">
+                <p>
+                    <a class="noLine" href="credits.html">Credits</a>
+                </p>
+            </div>
         </div>
     </body>
 </html>
