--- a/registerNewStudent.html
+++ b/registerNewStudent.html
@@ -48,10 +48,10 @@
             </p>
         </div>
         <hr />
-        <footer  class="footer">
+        <div  class="footer">
             <p>
                 <a class="noLine" href="credits.html">Credits</a>
             </p>
-        </footer>
+        </div>
     </body>
 </html>
